kubernetes/core/volsync/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: volsync
  labels:
    pod-security.kubernetes.io/enforce: restricted
