kubernetes/core/volsync/app/networkpolicy.yaml
---
# volsync-controller calls kube-apiserver to manage ReplicationSource/Destination lifecycle
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: volsync
  namespace: volsync
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: volsync-volsync
      app.kubernetes.io/name: volsync-perfectra1n
      control-plane: volsync-controller
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prometheus
            k8s:app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
